--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,9 +5,9 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "O mnie",  about_path %></li>
-      <li><%= link_to "Kontakt", contact_path %></li>
-      <li><a href="http://news.railstutorial.org/">Wiadomości</a></li>
+      <li><%= link_to "About",  about_path %></li>
+      <li><%= link_to "Contact", contact_path %></li>
+      <li><a href="http://news.railstutorial.org/">News</a></li>
     </ul>
   </nav>
 </footer>
